--- a/www/builder/sources/controls/Input/Input.css
+++ b/www/builder/sources/controls/Input/Input.css
@@ -4,6 +4,7 @@
 .app-input-container.half-width {
 	display: inline-block;
 	width: 49%;
+    vertical-align: top;
 }
 .app-input-container.half-width:nth-child(2n) {
 	margin-left: 2%;
