--- a/www/builder/sources/views/Main/Main.css
+++ b/www/builder/sources/views/Main/Main.css
@@ -13,7 +13,7 @@
 	width: 354px;    
     padding: 12px;
 }
-.app-mainpage-left-column > div:first-child {
+.app-mainpage-left-column-area {
 	position: relative;
     padding: 49px 20px 12px 20px;
     min-height: 180px;
@@ -21,7 +21,7 @@
     border-radius: 3px;
     font-size: 14px;
 }
-.app-mainpage-left-column > div:first-child > div:first-child {
+.app-mainpage-left-column-title {
     position: absolute;
     left: 0;
     top: 0;
@@ -36,4 +36,18 @@
     background-repeat: no-repeat;
     background-position: 17px 50%;
     font-family: ptsansbold;
+}
+.app-mainpage-left-column > div:last-child {
+    position: relative;
+    padding: 49px 20px 12px 20px;
+    min-height: 180px;
+    box-shadow: 0 0 6px #c1c5d1;
+    border-radius: 3px;
+    font-size: 14px;
+}
+.mainpage-leftcolumn-title {
+    margin-top: 27px;
+    font-size: 16px;
+    color: #4c546b;
+    padding-bottom: 7px;
 }
