--- a/www/builder/sources/ui/Calendar/Calendar.css
+++ b/www/builder/sources/ui/Calendar/Calendar.css
@@ -69,6 +69,15 @@
 .app-calendar-days span.another {
 	color: #bbb;
 }
+.app-calendar-days span.marked {
+    background-color: $red !important;
+    $white
+    $radius3
+    $pointer
+}
+.app-calendar-days span.marked:hover {
+    opacity: 0.7;
+}
 .app-calendar-days span.current {
 	background-color: #7e8fad;
     $white
