--- a/www/builder/sources/forms/OrderCallForm/OrderCallForm.css
+++ b/www/builder/sources/forms/OrderCallForm/OrderCallForm.css
@@ -1,8 +1,6 @@
 .app-order-call .send-button {
-	display: inline-block;
-    width: 140px;
-    margin-right: 12px;
+	$inb $w140 $mr12
 }
 .app-order-call textarea {
-	height: 100px;
+	$h100
 }
