--- a/www/builder/sources/ui/Checkbox/Checkbox.css
+++ b/www/builder/sources/ui/Checkbox/Checkbox.css
@@ -1,18 +1,8 @@
+$imgsrc = ../images/ui
 .app-ui-checkbox {
-	float: left;
-    display: block;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    margin-right: 7px;
-    cursor: pointer;
-    width: 14px;
-    height: 14px;
-    border: 1px solid #76849C;
-    background-color: #eaeef3;
-    border-radius: 3px;
+	$(fleft block bg mr7 pointer wh14 bo#76849C bc#eaeef3 br3)
 }
 .app-ui-checkbox.checked {
-    background-image: url(../images/ui/checkb.png);
-    border-color: #7E9CCA;
-    background-color: #ffffff;
+    $(boc#7E9CCA bgwhite)
+    $png = checkb
 }
