--- a/www/builder/sources/ui/Dialog/Dialog.css
+++ b/www/builder/sources/ui/Dialog/Dialog.css
@@ -1,94 +1,47 @@
+$imgsrc = ../images/ui/
+
 .app-dialog-mask {
-	display: none;
-	position: fixed;
-    top: 0px;
-    left: 0px;
-    bottom: 0px;
-    right: 0px;
-    z-index: 699;
-    background-color: #212D42;
+	$none $fix $rubber $z699 $bc#212D42
     opacity: 0.65;	
 }
 .app-dialog-mask.shown {
-	display: block;
+	$block
 }
 .app-dialog {
-	position: fixed;
-    z-index: 700;
-    left: 50%;
-    top: 50%;
-    border-radius: 5px;
-    background-color: #ffffff;
-    display: none;
+	$(fix incenter br5 bgwhite none z700)
 }
 .app-dialog.shown {
-	display: block;
+	$block
 }
 .app-dialog.expanded {
-	left: 0;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	width: auto !important;
-	height: auto !important;
-	margin-left: 0 !important;
-	margin-top: 0 !important;
-	border-radius: 0;
+    $(rubber br0 nosize nomargin)
 }
 .app-dialog-title {
     border-radius: 5px 5px 0px 0px;
-    padding: 12px;
-    text-align: center;
-    font-size: 16px;
-    font-family: ptsansbold;
-    color: #4a5b6f;
-    line-height: 22px;
-    z-index: 100;
-    margin-bottom: 15px;
-    position: relative;
-    border-bottom: 1px solid #e5e9f3;
-    background-color: #f6f7f9;
+    $(rel p12 c#4a5b6f z100 bob#e5e9f3 bc#f6f7f9 lh22 fs16 bold center)
+}
+.app-dialog-title:empty {
+    $none
 }
 .app-dialog.expanded .app-dialog-title {
-    border-radius: 0;
+    $br0
 }
 .app-dialog-content {
-	position: relative;
-    z-index: 2;
-    padding: 0 20px 20px 20px;
+	$rel $z2
+    padding: 15px 20px;
 }
-.app-dialog-close {
-    position: absolute;
-    z-index: 102;
-    right: 0px;
-    top: 10px;
-    margin-right: 8px;
-    width: 23px;
-    height: 23px;
-    background-image: url(../images/ui/close-dialog.png);
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    cursor: pointer;
-    opacity: 0.7;
+.app-dialog-close,
+.app-dialog-expand {
+    $ (abs z102 r t10 mr8 wh23 bg pointer opac7 png = close-dialog)
 }
 .app-dialog-expand {
-    position: absolute;
-    z-index: 102;
-    right: 20px;
-    top: 10px;
-    margin-right: 6px;
-    width: 23px;
-    height: 23px;
-    background-image: url(../images/ui/expand-dialog.png);
-    background-repeat: no-repeat;
-    background-position: 50% 50%;
-    cursor: pointer;
+    $r20 $png = expand-dialog
     opacity: 0.65;
 }
 .app-dialog.expanded .app-dialog-expand {
-    background-image: url(../images/ui/minimize-dialog.png);
+    $png = minimize-dialog
 }
 .app-dialog-expand:hover,
 .app-dialog-close:hover {
-    opacity: 1;
+    $opac10
 }
