--- a/www/builder/sources/ui/TooltipPopup/TooltipPopup.css
+++ b/www/builder/sources/ui/TooltipPopup/TooltipPopup.css
@@ -1,32 +1,13 @@
+$imgsrc = ../images/tooltips
 .app-tooltip-popup {
-	$fix
-	$bgwhite
-	$box
-	$none
-	z-index: 750;
-    border-radius: 3px;
-    border: 1px solid #C1C7D2;
-    font-size: 14px;
-    color: #47536c;
-    line-height: 20px;
-    min-width: 200px;
-    max-width: 400px;
+	$fix $bgwhite $box $none $z750 $br3 $bo#C1C7D2 $fs14 $c#47536c $lh20 $miw200 $maw400
 }
 .app-tooltip-popup.shown {
 	$block
 }
 .app-tooltip-popup-caption {
-    height: 35px;
-    line-height: 36px;
-    border-bottom: 1px solid #e5e9f3;
-    padding-left: 43px;
-    background-image: url(../images/tooltips/info.png);
-    background-repeat: no-repeat;
-    background-position: 10px center;
-    background-color: #f7f8f9;
-    color: #4a5b6f;
-    font-size: 16px;
-    $bold
+    $h35 $lh36 $bob#e5e9f3 $pl43 $norep $c#4a5b6f $fs16 $bc#f7f8f9 $bold $png = info
+    background-position: 10px center;    
 }
 .app-tooltip-popup-caption:empty {
 	$none
