--- a/www/builder/sources/entry/App.css
+++ b/www/builder/sources/entry/App.css
@@ -21,6 +21,13 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+    font-family: 'segoesemibold';
+    src: url('../fonts/seguisb.woff2') format('woff2'),
+         url('../fonts/seguisb.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 body {
 	$p0 $m0 $regular $c#505b6e
 }
