--- a/www/builder/sources/components/SearchForm/SearchForm.css
+++ b/www/builder/sources/components/SearchForm/SearchForm.css
@@ -1,21 +1,21 @@
 $imgsrc = ../images/searchform
 
 .app-search-form {
-	$abs $z2 $t7 $l-300 $b7 $w330 $br4 $c#222121 $bc#444b57    
+	$(abs z2 t7 l-300 b7 w330 br4 c#222121 bc#444b57)
 }
 .view-content.form-expanded .app-search-form {
     $l7
 }
 .app-search-form-title {
-    $h37 $lh39 $pl31 $bold $fs14 $box $c#edf0f4 $bob#3e4552
+    $(h37 lh39 pl31 bold fs14 box c#edf0f4 bob#3e4552)
     background-image: linear-gradient(to bottom, #647188, #4d5768);
     border-radius: 4px 4px 0 0;
 }
 .app-search-form-title:before {
-    $cnt $inb $w11 $h11 $mr8 $png = search
+    $(cnt inb w11 h11 mr8 png = search)
 }
 .app-search-form-close-side {
-    $abs $noimg $t $r $b $pointer $w30 $z25 $bc#6279A7
+    $(abs noimg t r b pointer w30 z25 bc#6279A7)
     border-radius: 0 3px 3px 0;
     height: auto;    
 }
@@ -24,13 +24,13 @@ $imgsrc = ../images/searchform
 }
 .app-search-form-close-side:after {
     content: 'Расширенный поиск';
-    $rot-90 $fs16 $white $lh20 $abs $r-83 $t90 $w200 $bold
+    $(rot-90 fs16 white lh20 abs r-83 t90 w200 bold)
 }
 .view-content.form-expanded .app-search-form-close-side {
     $none
 }
 .app-search-form-close {
-    $rot180 $block $abs $r $t7 $norep $pointer $z26 $wh23 $png = close    
+    $(rot180 block abs r t7 norep pointer z26 wh23 png = close)
     background-position: 100% 50%;
     transition: all 0.2s ease-out;
 }
@@ -38,11 +38,11 @@ $imgsrc = ../images/searchform
     $rot0 $r10
 }
 .app-search-form-reset {
-    $abs $r34 $t5 $pl22 $lh16 $h25 $w0 $fs14 $bold $norep $pointer $nowrap $z10 $png = clear $c#5c606a
+    $(abs r34 t5 pl22 lh16 h25 w0 fs14 bold norep pointer nowrap z10 png = clear c#5c606a)
     background-position: 100% 50%;    
 }
 .app-search-form-reset .hover-label {
-    $none $abs $white $r $lh36 $t50% $mt-18 $bc#D35655
+    $(none abs white r lh36 t50% mt-18 bc#D35655)
     padding: 0 10px 0 11px;
 }
 .app-search-form-reset:hover .hover-label {
@@ -52,10 +52,10 @@ $imgsrc = ../images/searchform
     $none
 }
 .app-search-form-reset.active {
-    $w134 $h36 $t $bc#D35655
+    $(w134 h36 t bc#D35655)
 }
 .app-search-form-reset .confirm-label {
-    $none $nowrap $white $right $lh36
+    $(none nowrap white right lh36)
     border-top-left-radius: 4px;
     cursor: auto;
 }
@@ -66,7 +66,7 @@ $imgsrc = ../images/searchform
     $block
 }
 .app-search-form-reset.active .confirm-label i {
-    $lh36 $pointer $bc#B35050
+    $(lh36 pointer bc#B35050)
     font-style: normal;
     padding: 9px 15px;
 }
