--- a/www/builder/sources/ui/TooltipPopup/TooltipPopup.css
+++ b/www/builder/sources/ui/TooltipPopup/TooltipPopup.css
@@ -13,5 +13,8 @@ $imgsrc = ../images/tooltips
 	$none
 }
 .app-tooltip-popup-text {
-	padding: 15px 18px;
+	$p15_18
+}
+.app-tooltip-list-item {
+	$(lh16 p5_0)
 }
