--- a/www/css/styles.css
+++ b/www/css/styles.css
@@ -177,6 +177,13 @@ body.main-page .app-top-menu-inner{width:1350px;margin:auto;}
 .app-popup-menu-outer-container{position:absolute;z-index:500;width:200px;margin-top:1px;text-align:left;top:100%;border-radius:3px;background-color:#fff;border-left:1px solid #6C7992;border-right:1px solid #6C7992;max-height:0;overflow:hidden;transition:all 0.2s;}
 .app-popup-menu-inner-container{position:absolute;left:0;right:0;bottom:0;border-top:1px solid #6C7992;border-bottom:1px solid #6C7992;background-color:#fff;border-radius:3px;padding:5px 0;}
 .app-popup-menu-button{position:relative;padding-left:15px;line-height:30px;font-size:14px;color:#424b57;cursor:pointer;white-space:nowrap;overflow:hidden;height:30px;}
+/* TabPanel */
+.app-tab-panel{position:relative;height:34px;}
+.app-tab{width:200px;text-align:center;position:absolute;height:34px;line-height:34px;background-color:#e2e4ea;color:#40485F;cursor:pointer;border-radius:2px 2px 0 0;font-size:14px;}
+.app-tab:hover{background-color:#eee;}
+.app-tab:after{position:absolute;content:'';bottom:0;left:0;right:0;height:4px;background-image:url(../images/tabpanel/shade.png);background-repeat:repeat-x;z-index:2;}
+.app-tab.app-tab-rest{width:auto;padding:0 20px;z-index:1;visibility:hidden;}
+.app-tab.app-tab-rest.shown{visibility:visible;}
 /* Tooltip */
 .app-tooltip{width:18px;height:18px;background-color:#C1C6D6;line-height:17px;display:inline-block;border-radius:50%;cursor:pointer;font-family:ptsansbold;text-align:center;box-sizing:border-box;color:#fff;}
 .app-tooltip:before{content:'!';}
@@ -204,6 +211,7 @@ body.main-page .app-top-menu-inner{width:1350px;margin:auto;}
 .app-mainpage-left-column-title{position:absolute;left:0;right:0;top:0;line-height:39px;height:37px;color:#edf0f4;background-color:#51648d;padding-left:43px;font-family:ptsansbold;background-repeat:no-repeat;background-image:url(../images/mainpage/person-icon.png);border-radius:3px 3px 0 0;background-position:17px 50%;}
 .app-mainpage-left-column > div:last-child{position:relative;min-height:180px;border-radius:3px;font-size:14px;padding:49px 20px 12px 20px;box-shadow:0 0 6px #c1c5d1;}
 .mainpage-leftcolumn-title{margin-top:27px;font-size:16px;color:#4c546b;padding-bottom:7px;}
+.app-mainpage-table .app-mainpage-content-column{padding-top:12px;}
 /* UserInfo */
 .app-mainpage-user-info{margin-top:10px;}
 .app-mainpage-user-info td{line-height:14px;vertical-align:middle;padding:6px 0;}
