--- a/www/builder/sources/views/Main/Main.css
+++ b/www/builder/sources/views/Main/Main.css
@@ -27,5 +27,9 @@ $imgsrc = ../images/mainpage
     $(mt27 fs16 c#4c546b pb7)
 }
 .app-mainpage-table .app-mainpage-content-column {
-    $(pt12)
+    $(pt12 rel)
+}
+.app-mainpage-content {
+    $(abs b12 t46 l r12 br3 ova p12_15)
+    box-shadow: 0 0 6px #c1c5d1;
 }
